--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "more-djs-events",
-  "version": "1.0.1",
+  "version": "1.0.5",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.7.5",
     "discord.js": "^13.3.1"
   },
   "devDependencies": {
